--- a/src/main/webapp/css/specific/smart_assistant.css
+++ b/src/main/webapp/css/specific/smart_assistant.css
@@ -20,3 +20,9 @@
     padding-right: 1.5rem;
     margin-top: 0.5rem;
 }
+
+.assistant-button:hover {
+    color: white;
+    background-color: #296486;
+    border-color: #1b5171;
+}
